configured pm2, eslint, babel, webpack, and added scripts to package.json

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=7">
         <title>Archie React Starter</title>
-    </head>
+        
+    </head> 
     <body>
-        <h2>Hi Express and EJS -- <%= answer %></h2>
+        <div id="root">
+            Loading...
+        </div>
+        <script src="/bundle.js" charset="utf-8"></script>
     </body>
 </html>
